# tree

./: .gitignore  LICENSE  README.md  hatch.toml  pyproject.toml
src/tree/: _cli.py  trie.py
